Make the timer run on only one button

--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,7 @@
     <span id="cd_s">00</span>
   </div>
   <div class="timer-controls">
-    <input type="button" value="Start" id="cd_start">
-    <input type="button" value="Pause" id="cd_pause">
-    <input type="button" value="Reset" id="cd_reset">
+    <input type="button" value="Start" id="cd_toggle">
     <span id="cd_status">Idle</span>
   </div>
 </template>
