Start and stop timer when you click on the timer element

--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,9 @@
 </body>
 
 <template name="timer">
-  <div class="timer">
-    <span id="cd_m">25</span>:
-    <span id="cd_s">00</span>
-  </div>
-  <div class="timer-controls">
-    <input type="button" value="Start" id="cd_toggle">
-    <span id="cd_status">Idle</span>
+  <div id="timer_toggle" class="timer">
+    <span id="timer_m">25</span>:
+    <span id="timer_s">00</span>
   </div>
 </template>
 
