--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,11 @@
 <template name="timerSection">
   <section class="section timer is-current">
     {{> timer}}
+    <div class="timer-actions">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
   </section>
 </template>
 
