--- a/client/index.html
+++ b/client/index.html
@@ -30,15 +30,15 @@
 </template>
 
 <template name="todos">
-  <section class="todos">
+  <div class="todos">
     {{#each todo}}
       <div class="todo">
-        <input type="checkbox">
+        <input type="checkbox" checked={{done}}>
         {{title}}
       </div>
     {{/each}}
     <div class="todo">
       <input type="text" class="todo-add" placeholder="Add a todo and press 'enter'">
     </div>
-  </section>
+  </div>
 </template>
